--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jcw2865/Homework-9#readme",
   "dependencies": {
+    "axios": "^0.19.1",
     "inquirer": "^7.0.3"
   }
 }
