Index.html being populated by index.js, but there is still a scoping issue with the variables being declared in axios.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jcw2865/Homework-9#readme",
   "dependencies": {
     "axios": "^0.19.1",
-    "inquirer": "^7.0.3"
+    "inquirer": "^7.0.3",
+    "util": "^0.12.1"
   }
 }
