--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/jcw2865/Homework-9#readme",
   "dependencies": {
     "axios": "^0.19.1",
+    "convert-html-to-pdf": "^1.0.1",
+    "html-pdf": "^2.2.0",
     "inquirer": "^7.0.3",
     "util": "^0.12.1"
   }
